test/parallel/single/waynew/simple0.good
simple0.chpl:6: error: halt reached - single var already defined
