test/parallel/single/waynew/simple0.chpl
// Should not be able to assign to a single more than once.

var s: single int;

s.writeEF(1);
s.writeEF(2);

